--- a/Blog/champblogs/templates/champblogs/post_list.html
+++ b/Blog/champblogs/templates/champblogs/post_list.html
@@ -1,18 +1,13 @@
-<html>
-    <head>
-        <title>Champblogs</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Python Blogs</a></h1>
+{% extends 'champblogs/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-    	
-	{% for post in posts %}
-    		<div>
-			<p>published: {{ post.published_date }}</p>
-			<h2><a href="">{{ post.title }}</a></h2>
-			<p>{{ post.text|linebreaksbr }}</p>
-	    	</div>
-	{% endfor %}
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
