--- a/Blog/champblogs/static/css/champblogs.css
+++ b/Blog/champblogs/static/css/champblogs.css
@@ -23,6 +23,7 @@ body {
 }
 
 h1, h2, h3, h4 {
+    color: #191372;
     font-family: 'satisfy', cursive;
 }
 
@@ -52,4 +53,7 @@ h1, h2, h3, h4 {
 
 .post h2 a, .post h2 a:visited {
     color: #191372;
+}
+
+
 }
