--- a/Blog/champblogs/templates/champblogs/base.html
+++ b/Blog/champblogs/templates/champblogs/base.html
@@ -12,7 +12,7 @@
         {% if user.is_authenticated %}
           <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         {% endif %}
-        <h1><a href="/">Python Blogs</a></h1>
+        <h1><a href="/">ChampBlogs</a></h1>
     </div>
     <div class="content container">
         <div class="row">
