--- a/Blog/champblogs/templates/champblogs/post_list.html
+++ b/Blog/champblogs/templates/champblogs/post_list.html
@@ -6,8 +6,10 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|truncatewords:"50"|linebreaksbr }}</p>
         </div>
     {% endfor %}
 {% endblock %}
+
+
