--- a/Blog/champblogs/templates/champblogs/base.html
+++ b/Blog/champblogs/templates/champblogs/base.html
@@ -11,6 +11,10 @@
     <div class="page-header">
         {% if user.is_authenticated %}
           <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+          <p class="top-menu"><small><i>Hello, {{ user.username }}</i>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+          {% else %}
+          <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
         <h1><a href="/">ChampBlogs</a></h1>
     </div>
